# books_collection

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 12c6f4ab62ef_add_m_m_to_models.py  766d756ead97_change_type_of_isbn_number.py  884548465ac4_add_book_model_for_test_scraper.py  b8908d6b76f0_add_user_model.py  bafbc4773660_publish_year_to_publish_date_change.py  bd89bbeccfaf_add_isbn_number_to_book_model.py
src/: config.py  main.py
src/database/: db.py
src/managers/: base_manager.py  book_manager.py  user.py
src/models/: base.py  book.py  user.py
src/routers/: auth.py  book.py  user.py
src/schemas/: book.py
src/scraper/: scraper.py
src/services/: book_service.py  user_service.py
src/utils/: dependencies.py  scraper.py
templates/: base.html  check_me.html  index.html  register_page.html
tests/: conftest.py  test_auth.py
tests/models/: conftest.py  test_book_model.py
